--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ nav li a.active{border-bottom: 2px solid #fff;}
   background-image: linear-gradient(to top, #304352 0%, #d7d2cc 100%);
 }
 .navbar-light .navbar-nav .nav-link img{width:10px; margin-right:5px;}
-.boldp{font-weight:700; color: white; font-size: 1rem;}
+.boldp{font-weight:600; color: white; font-size: 1rem;}
 
 .blist1 li{
     font-size: 1.2rem;
@@ -932,7 +932,7 @@ label.error {
 
         @media(max-width:991px) {
 .boldp{
-    color: black;font-weight: 400;font-size: 1rem;
+    color: black;font-weight: 400;font-size: 13px;
 }
             .navbar-light .navbar-toggler-icon img{
                 width: 2rem;
@@ -1138,11 +1138,11 @@ label.error {
                 margin-bottom: 6px
             }
             .boldp{
-                color: black;font-weight: 400;
+                color: black;font-weight: 400;font-size: 13px;
             }
 }
     @media (max-width:480px) {
-   .boldp{color: black; font-weight: 400;}
+   .boldp{color: black; font-weight: 400;font-size: 13px;}
 
         .table-bordered {
             font-size: 9px;
