--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@ nav li a.active{border-bottom: 2px solid #fff;}
 .bottom-sec{padding:10px 0}
 .bottom-sec ul{padding:0px 0;margin:0}
 
-.hiddendk{ display:inline-block;}
+.hiddendk{ display:inline-block;width: 30px;}
 .hiddenmob{ display:none;}
 .first-sec p{
     
@@ -934,6 +934,8 @@ label.error {
 .boldp{
     color: black;font-weight: 400;font-size: 13px;
 }
+.hiddenmob{width: 20px;}
+
             .navbar-light .navbar-toggler-icon img{
                 width: 2rem;
             }
@@ -1140,10 +1142,14 @@ label.error {
             .boldp{
                 color: black;font-weight: 400;font-size: 13px;
             }
+            
+.hiddenmob{width: 20px;}
 }
     @media (max-width:480px) {
    .boldp{color: black; font-weight: 400;font-size: 13px;}
 
+   .hiddenmob{width: 20px;}
+   
         .table-bordered {
             font-size: 9px;
         }
